[package]
name = "npv"
version = "0.1.0"
authors = ["Paddy Horan <paddyhoran@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug = true

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "npv"
path = "src/bin/npv.rs"

[[bench]]
name = "bench_me"
harness = false


